feat: add loading skeleton for dashboard

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -80,6 +80,11 @@ abbr:where([title]) {
     border-radius: 4px;
 }
 
+.test {
+  background-color: #131032cc;
+}
+
+
 @layer components {
     .transitionEase {
         transition: all 0.3s ease;
